# wc_coupon_tgbot

./: README.md  main.py  message_template.txt  pyproject.toml  requirements.txt  tgbot.service  wc_coupon_tg_bot.py
utils/: coupon.py  sender.py  settings.py  wccoupon.py
